<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/selectedAppIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/selected_app_icon_description"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/selectedAppName"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_below="@+id/selectedAppIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/default_selected_app_name"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/brightnessControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedAppName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/brightnessIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/brightness_icon_description"
            android:src="@drawable/brightness_icon" />

        <SeekBar
            android:id="@+id/brightnessSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/brightnessSettingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/default_setting_value"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/volumeControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brightnessControls"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/volumeIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/volume_icon_description"
            android:src="@drawable/volume_icon" />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="60dp"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/volumeSettingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/default_setting_value"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>